samples/_failures_safe/1761042815_2f3daf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c707b8d.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_4c707b8d.c:155:14: error: ‘TO’ undeclared (first use in this function)
  155 |         case TO
      |              ^~
./samples/SAFE/__tmp_4c707b8d.c:155:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4c707b8d.c:155:9: error: expected ‘:’ or ‘...’ at end of input
  155 |         case TO
      |         ^~~~
./samples/SAFE/__tmp_4c707b8d.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c707b8d.c:155:9: error: expected declaration or statement at end of input
